# python-transcriber

./: .gitignore  README.md  pyproject.toml  video_transcriber.py
src/video_transcriber/: __init__.py  cli.py  core.py  formats.py
tests/: test_cli.py  test_formats.py
